rhdemo-2020/frontend/admin-edge-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: admin-edge
    application: admin-edge
  name: admin-edge
spec:
  replicas: 2
  selector:
    deploymentconfig: admin-edge
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: admin-edge
        deploymentconfig: admin-edge
    spec:
      containers:
      - env:
        - name: IP
          value: 0.0.0.0
        - name: PORT
          value: "8080"
        image: quay.io/redhatdemo/2020-admin-edge:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /status
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
        name: admin-edge
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /status
            port: 8080
            scheme: HTTP
        resources:
          limits:
            cpu: 1000m
            memory: 2000Mi
          requests:
            cpu: 500m
            memory: 1000Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/messaging/
          name: skupper
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: skupper
        secret:
          defaultMode: 420
          secretName: skupper
  test: false
  triggers:
  - type: ConfigChange
