rhdemo-2020/frontend/admin-edge-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-edge
    application: admin-edge
  name: admin-edge
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: admin-edge
