rhdemo-2020/frontend/phone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phone-server
    application: phone-server
  name: phone-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: phone-server
