rhdemo-2020/frontend/admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: admin-edge
    application: admin-edge
  name: admin
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: admin-edge
