rhdemo-2020/frontend/game-sysdeseng-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: phone-ui
  name: game-sysdeseng
spec:
  host: game.sysdeseng.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: phone-ui
