rhdemo-2020/frontend/phone-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: phone-ui
  name: game
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: phone-ui
